# playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: README.md
.github/workflows/: leetcode-c-tests.yml  leetcode-haskell-tests.yml  leetcode-prolog-tests.yml  leetcode-python-tests.yml  leetcode-rust-tests.yml  memalloc.yml  papersai-tests.yml  sync-hf-space.yml
src/codecrafters/coding-agent/: .env.example  Cargo.toml  README.md  tools.json
src/codecrafters/coding-agent/src/: lib.rs  main.rs
src/codecrafters/coding-agent/tests/: tool_tests.rs
src/leetcode/: README.md  justfile
src/leetcode/eval/: evaluate.c.sh  evaluate.hs.sh  evaluate.pro.sh  evaluate.py  evaluate.rust.sh
src/leetcode/graphs/data/: 133.json  200.json  207.json  210.json  286.json  695.json  994.json
src/leetcode/graphs/python/: 133.py  200.py  207.py  210.py  286.py  695.py  994.py  eval.py
src/leetcode/trees/c/: 100.c  104.c  110.c  226.c  543.c  572.c  eval.c
src/leetcode/trees/cpp/: 100.cpp  104.cpp  110.cpp  226.cpp  543.cpp  572.cpp  eval.cpp
src/leetcode/trees/data/: 100.json  104.json  110.json  226.json  572.json
src/leetcode/trees/haskell/: trees.cabal
src/leetcode/trees/haskell/src/: Main.hs  Solution100.hs  Solution104.hs  Solution110.hs  Solution226.hs  Solution543.hs  Solution572.hs  eval.hs  solution100.hs  solution104.hs  solution110.hs  solution226.hs  solution543.hs  solution572.hs
src/leetcode/trees/prolog/: 100.pro  104.pro  110.pro  226.pro  543.pro  572.pro
src/leetcode/trees/python/: 100.py  104.py  110.py  572.py  eval.py
src/leetcode/trees/rust/: Cargo.toml
src/memalloc/arena/: Makefile  README.md  arena.c  arena.h  example.c
src/misc/quadtree/haskell/: Main.hs  flake.nix  package.yaml
src/misc/quadtree/js/: README.md  index.html  package.json  pnpm-lock.yaml  quadtree.js  sketch.js
src/misc/symmetricList/haskell/: SymList.hs  flake.nix
src/neetcode/trees/data/: 100.json  110.json  543.json
src/neetcode/trees/python/: 226.py  543.py  eval.py
src/papersai/: README.md  pyproject.toml
src/papersai/examples/: README.md  rag_ui.py
src/papersai/papersai/: __init__.py  utils.py
src/papersai/papersai/cli/: daily_papers.py  qna.py  summarize.py  utils.py
src/papersai/papersai/engine/: chat.py
src/papersai/papersai/ui/: app.py  local.py
src/papersai/src/cli/: daily_papers.py  qna.py  summarize.py
src/papersai/src/engine/: __init__.py  summarize.py
src/papersai/src/ui/: app.py  local.py
src/papersai/tests/: test_utils.py
src/shell/: Makefile  README.md  main.c
src/sort/selection/: selection.c
src/viz/manim-hypergraph-fano-plane/: README.md  animate.py
templates/c/: flake.nix
templates/haskell/: flake.nix
templates/prolog/: flake.nix
templates/python/: flake.nix
templates/rust/: flake.nix
(+9 files in other folders)
